add content page services

--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-
+{% block title %}Nos services{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('CSS/catalog.css') }}" rel="stylesheet">
 {% endblock %}
@@ -17,12 +17,10 @@
                         <h1>Nos services</h1>
                     </div>
                     <div class="row col-xs-6">
-                        <h2>A Subtitle</h2>
+                        <h2>Toutes nos prestations sur une seule page !</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
-                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
-                            dictum.</p>
+                        <p class="envaleur">Retrouvez tout ce qu’il vous faut pour réaliser vos projets (même les plus fous) ! Et si vous avez la moindre question bien sûr n’hésitez pas. Nous sommes là pour comprendre et pallier à vos besoins.</p>
                     </div>
                 </div>
             </div>
@@ -38,31 +36,28 @@
                 <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Basic</h1>
-                        <h4>500€</h4>
+                        <h4>1050 €</h4>
                     </div>
                     <div class="row justify-content-lg-center">
                         <div class="col-md-12 col-lg-12">
                             <table>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- 5 thème au choix</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- 6 pages</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
+                                    <td>- Compatibilité avec tous les supports</td>
                                 </tr>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Hébergement, nom de domaine et emails</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- Mentions légales</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
-                                </tr>
-                                <tr>
-                                    <td>Item One</td>
+                                    <td>- Maintenance, SAV et sécurité pendant 6 mois</td>
                                 </tr>
                             </table>
                         </div>
@@ -78,31 +73,31 @@
                 <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Premium</h1>
-                        <h4>1000€</h4>
+                        <h4>1820 €</h4>
                     </div>
                     <div class="row justify-content-lg-center">
                         <div class="col-md-12 col-lg-12">
                             <table>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- 12 thèmes au choix</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- 6 pages et un blog</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
+                                    <td>- Formulaire de contact</td>
                                 </tr>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Compatibilité avec tous les supports</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- Hébergement, nom de domaine et emails</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
+                                    <td>- Mentions légales</td>
                                 </tr>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Maintenance, SAV et sécurité pendant 8 mois</td>
                                 </tr>
                             </table>
                         </div>
@@ -125,25 +120,25 @@
                         <div class="col-md-12 col-lg-12">
                             <table>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Conseils en statégie digitale</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- Accompagnement vers la transformation digitale</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
+                                    <td>- création de votre identité visuelle</td>
                                 </tr>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Refonte d'un site existant</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Two</td>
+                                    <td>- Référencement naturel et monétisé</td>
                                 </tr>
                                 <tr>
-                                    <td>Item Three</td>
+                                    <td>- Hébergement, nom de domaine et emails</td>
                                 </tr>
                                 <tr>
-                                    <td>Item One</td>
+                                    <td>- Maintenance</td>
                                 </tr>
                             </table>
                         </div>
@@ -168,26 +163,17 @@
                         <img src="{{ asset('images/catalog/1.packs-choice.svg') }}" alt="Bootstrap"
                              class="rounded mx-auto d-block svg100">
                         <h5>Vous choisissez</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <p>Grâce à nos trois packs, vous avez la possibilité de choisir l’offre qui correspond le mieux à vos besoins. Des prix imbattables qui feront plaisir à votre porte-monnaie !</p>
                     </div>
                     <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/2.discuss.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
-                        <h5>On discute avec vous</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <h5>On vous contacte</h5>
+                        <p>Après le choix de votre offre, nous vous appelons dans les meilleurs délais pour faire connaissance et cerner au mieux vos besoins. Dès lors, nous pourrons lancer votre projet !</p>
                     </div>
                     <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/3.plan.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On planifie avec vous</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <p>Après une étude de vos besoins, nous planifions avec vous le déroulement de votre projet. Deadlines, réunions, tout y sera pour que vous puissiez vous focaliser uniquement sur le principal : votre métier !</p>
                     </div>
                 </div>
             </div>
@@ -198,31 +184,22 @@
                     <div class="col-sm-12 col-md-3 col-lg-3 ">
                         <img src="{{ asset('images/catalog/4.design.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On conçoit</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <p>Notre équipe de designer réalise des modèles ergonomique et moderne. Vous avez des idées ? Nous pouvons les réaliser sur mesure !  </p>
                     </div>
                     <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/5.code.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On développe</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <p>Nous apportons un soin particulier à l'envers du décors : le code. Nous apportons du dynamisme et fiabilité à votre projet ! </p>
                     </div>
                     <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/6.maintient.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On maintient</h5>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
+                        <p>Un bon site et un site maintenu. Nous pouvons assurer la mise à jour aussi longtemps que votre confiance en nous perdurera !</p>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center space">
                     <div class="row col-auto margin-auto">
-                        <img src="{{ asset('images/catalog/7.checked.svg') }}" class="svg-padding h1">
+                        <img src="{{ asset('images/catalog/7.checked.svg') }}" class="svg-padding h1 mt-0">
                         <h4>Vous êtes satisfait</h4>
                     </div>
                 </div>
