add category in article blog

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -16,7 +16,7 @@
     <div class="row d-flex align-items-start " id="header-main">
         <!-- Logo -->
         <div class="row col-12 d-lg-none">
-            <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-left" id="logo-nav">
+            <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-center" id="logo-nav">
                 <a href="{{ path('home_page') }}"><img src="{{ asset('images/logo-small-color-svg.svg') }}"
                                                        alt="Logo de cocorico agence digitale" width="115px"></a>
             </div>
