--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -32,6 +32,10 @@
                     <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
                         <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180"
                              width="100%">
+                        <div class="col-12 text-right">
+                            <h7 class="font-weight-bold">{{ article.category }}</h7>
+                        </div>
+
                         <h5>Ecrit par {{ article.author.firstname }} le {{ article.date|date('d.m.Y') }}</h5>
                         <h6>{{ article.title }}</h6>
                         <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
