--- a/templates/admin/article.html.twig
+++ b/templates/admin/article.html.twig
@@ -37,12 +37,12 @@
         <div class="row">
             <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
                 <h3 class="text-center">Informations compte</h3>
-                <div class="row d-flex justify-content-between">
-                    <div class="offset-md-1 offset-lg-1 col-md-5 col-lg-5">
+                <div class="row d-flex justify-content-left">
+                    <div class="offset-md-1 offset-lg-1 col-md-5 col-lg-7">
                         {{ form_start(form) }}
                         {{ form_row(form.title) }}
                     </div>
-                    <div class="col-md-5 col-lg-5">
+                    <div class="col-md-5 col-lg-3">
                         {{ form_row(form.category) }}
                     </div>
                 </div>
@@ -50,6 +50,9 @@
                     <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 mt-3">
                         {{ form_row(form.content) }}
                     </div>
+                        <div class="offset-1 col-10">
+                            {{ form_row(form.image) }}
+                        </div>
                     <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 mt-3">
                         {{ form_row(form.Ajouter) }}
                     </div>
