fix position and text homepage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -99,8 +99,8 @@
             <h2 class="text-center margin-auto">Un projet ?</h2>
         </div>
         <div class="offset-sm-4 offset-2 col-8 col-sm-4 text-center">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
+            <p>Allez-y contactez-nous, c'est peut-être cette décision qui emplifira votre visibilité digital. Notre expertise 100% française ne vous décevra pas!  </p>
+            <p>Et vous savez ? C'est totalement gratuit !</p>
         </div>
         <div class="col-12 align-self-top text-center">
             <button class="margin-auto">Button</button>
