--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
     <div class="container-fluid page-content">
         <header>
             <div class="row justify-content-around block-first margin-auto">
-                <div class="col-12 col-lg-4 justify-content-around">
+                <div class="col-12 col-lg-6 justify-content-around">
                     <div class="row">
                         <h1>Cocorico Digital</h1>
                     </div>
@@ -44,8 +44,7 @@
                         <img src="{{ asset('images/home/1.marketing.svg') }}" class="br" height="100" width="100">
                     </div>
                     <div>
-                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
-                            Tria</p>
+                        <p class="text-center">Nous construisons un plan marketing personnalisé après avoir collecté et analysé votre secteur d'activité. </p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
@@ -53,8 +52,7 @@
                         <img src="{{ asset('images/home/2.design.svg') }}" class="br svg" height="100" width="100">
                     </div>
                     <div>
-                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
-                            Tria</p>
+                        <p class="text-center">Nous apprenons à nous connaitre pour proposer un site visuellement proche de vos valeurs</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
@@ -62,8 +60,7 @@
                         <img src="{{ asset('images/home/3.dev.svg') }}" class="br svg" height="100" width="100">
                     </div>
                     <div>
-                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
-                            Tria</p>
+                        <p class="text-center">Nous proposons un ensemble de fonctionnalité pour rapprocher les clients de vos produits ou prestations</p>
                     </div>
                 </div>
             </div>
