change resolution and format pictures

--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
-                    <img src="{{ asset('images/contact.jpg') }}" class="img-fluid img-round">
+                    <img src="{{ asset('images/contact.png') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
