--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
-                    <img src="{{ asset('images/propos.jpg') }}" class="img-fluid img-round">
+                    <img src="{{ asset('images/propos.png') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
