--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -9,7 +9,7 @@
         <header>
             <div class="row justify-content-around margin-auto">
                 <div class="col-lg-5 d-none d-lg-block">
-                    <img src="{{ asset('images/services.jpg') }}" class="img-fluid img-round">
+                    <img src="{{ asset('images/services.png') }}" class="img-fluid img-round">
                 </div>
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
