--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -17,7 +17,7 @@
                         <h2>Contactez la team Cocorico Digital !</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">LVous avez besoin d’une information, une question à nous poser ou vous souhaitez juste nous laisser un petit mot doux ? Pas de problème, on se lève au chant du coq pour traiter au plus vite votre demande !</p>
+                        <p class="envaleur">Vous avez besoin d’une information, une question à nous poser ou vous souhaitez juste nous laisser un petit mot doux ? Pas de problème, on se lève au chant du coq pour traiter au plus vite votre demande !</p>
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
