Add meta tags for SEO

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="Keywords" content="Cocorico Digital Agence Web Multimedia">
+    <meta name="Subject" content="Cocorico Digital">
+    <meta name="Author" content="Cocorico Digital">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131010788-1"></script>
     <script>
