--- a/templates/projects/project_lenormant.html.twig
+++ b/templates/projects/project_lenormant.html.twig
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row background_article col-12 col-lg-12 ">
         </div>
-        <div class="row offset-1 col-10 title_article">
+        <div class="row offset-lg-1 col-10 title_article">
             <div class="col-lg-12">
                 <h1>Le groupe Lenormant</h1>
             </div>
@@ -16,7 +16,7 @@
                 <h2>Le groupe Lenormant, une société familiale pas comme les autres !</h2>
             </div>
         </div>
-        <div class="offset-1 col-lg-10 col-12">
+        <div class="offset-lg-1 col-lg-10 col-12">
             <div class="row d-flex justify-content-between">
                 <div class="col-lg-5 col-12 ">
                     <h4>L'équipe en charge</h4>
@@ -28,19 +28,63 @@
                         <p>Développeur Full-stack</p>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="col-12">
+                <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+                    <div class="col-12 text-justify">
                         <h4>Livrables et autres</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 mt-5 text-justify">
                         <h4>Objectif du projet</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                     </div>
                 </div>
             </div>
+            <!-- Carousel -->
+            <div id="myCarousel" class="carousel slide col-12 margin-auto d-lg-none d-flex justify-content-center" data-ride="carousel">
+
+
+
+                <!-- The slideshow -->
+                <div class="carousel-inner" style=" width:320px" >
+                    <div class="carousel-item active">
+                        <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <a href="https://www.lenormant.fr"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_1.png') }}" class="img-fluid" alt="" height="180" width="320"></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <a href="https://www.lenormant.fr/news"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_3.jpg') }}" class="img-fluid" alt="" height="180" width="320"></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <a href="https://www.lenormant.fr/page/utilitaire-pro/utilitaire-pro-33"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_2.jpg') }}" class="img-fluid" alt="" height="180" width="320"></a>
+                        </div>
+                    </div>
+
+                    <!-- Indicators -->
+                    <ul class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ul>
+
+                    <!-- Left and right controls -->
+                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+
+
+
+            </div>
+        </div>
+        <div class="d-none d-lg-flex">
             <h4>Galerie du projet</h4>
             <div class="row d-flex justify-content-between">
                 <div class="col-lg-4 p-0">
