--- a/templates/projects/project_lenormant.html.twig
+++ b/templates/projects/project_lenormant.html.twig
@@ -44,8 +44,6 @@
             <!-- Carousel -->
             <div id="myCarousel" class="carousel slide col-12 margin-auto d-lg-none d-flex justify-content-center" data-ride="carousel">
 
-
-
                 <!-- The slideshow -->
                 <div class="carousel-inner" style=" width:320px" >
                     <div class="carousel-item active">
@@ -79,24 +77,22 @@
                         <span class="carousel-control-next-icon"></span>
                     </a>
                 </div>
-
-
-
             </div>
-        </div>
-        <div class="d-none d-lg-flex">
-            <h4>Galerie du projet</h4>
-            <div class="row d-flex justify-content-between">
-                <div class="col-lg-4 p-0">
-                    <div class="col-12 mb-3 p-0">
-                        <a href="https://www.lenormant.fr/page/utilitaire-pro/utilitaire-pro-33"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_2.jpg') }}" class="img-fluid" alt=""></a>
+
+            <div class="d-none d-lg-inline-block mt-lg-5">
+                <h4>Galerie du projet</h4>
+                <div class="row d-flex justify-content-between">
+                    <div class="col-lg-4 p-0">
+                        <div class="col-12 mb-3 p-0">
+                            <a href="https://www.lenormant.fr/page/utilitaire-pro/utilitaire-pro-33"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_2.jpg') }}" class="img-fluid" alt=""></a>
+                        </div>
+                        <div class="col-12 p-0">
+                            <a href="https://www.lenormant.fr/news"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_3.jpg') }}" class="img-fluid" alt=""></a>
+                        </div>
                     </div>
-                    <div class="col-12 p-0">
-                        <a href="https://www.lenormant.fr/news"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_3.jpg') }}" class="img-fluid" alt=""></a>
+                    <div class="col-lg-8">
+                        <a href="https://www.lenormant.fr/"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_1.png') }}" class="img-fluid" alt=""></a>
                     </div>
-                </div>
-                <div class="col-lg-8">
-                    <a href="https://www.lenormant.fr/"><img src="{{ asset('images/projects/Lenormant/Groupe_Lenormant_1.png') }}" class="img-fluid" alt=""></a>
                 </div>
             </div>
         </div>
