add link in page home and service, resize picture project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -106,7 +106,9 @@
             <p>Et vous savez ? C'est totalement gratuit !</p>
         </div>
         <div class="col-12 align-self-top text-center">
-            <button class="margin-auto">Button</button>
+            <a href="{{ 'contact' }}">
+            <button class="margin-auto">Nous contacter</button>
+            </a>
         </div>
     </div>
 </div>
