--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -42,16 +42,16 @@
                         <div class="col-md-12 col-lg-12">
                             <table>
                                 <tr>
-                                    <td>- 5 thème au choix</td>
+                                    <td>- 5 modèles de site au choix</td>
                                 </tr>
                                 <tr>
-                                    <td>- 6 pages</td>
+                                    <td>- 6 pages incluses </td>
                                 </tr>
                                 <tr>
-                                    <td>- Compatibilité avec tous les supports</td>
+                                    <td>- Compatibilité avec tous les supports (pc, mobiles, etc..)</td>
                                 </tr>
                                 <tr>
-                                    <td>- Hébergement, nom de domaine et emails</td>
+                                    <td>- Hébergement du site, nom de domaine et emails</td>
                                 </tr>
                                 <tr>
                                     <td>- Mentions légales</td>
@@ -63,8 +63,8 @@
                         </div>
                     </div>
                     <div class="row justify-content-around">
-                        <a href="#">
-                            <button>Button</button>
+                        <a href="{{ 'contact' }}">
+                            <button>Sélectionner</button>
                         </a>
                     </div>
                 </div>
@@ -82,13 +82,16 @@
                                     <td>- 12 thèmes au choix</td>
                                 </tr>
                                 <tr>
-                                    <td>- 6 pages et un blog</td>
+                                    <td>- 6 pages incluses </td>
+                                </tr>
+                                <tr>
+                                    <td>- un blog</td>
                                 </tr>
                                 <tr>
                                     <td>- Formulaire de contact</td>
                                 </tr>
                                 <tr>
-                                    <td>- Compatibilité avec tous les supports</td>
+                                    <td>- Compatibilité avec tous les supports (pc, mobiles, etc..)</td>
                                 </tr>
                                 <tr>
                                     <td>- Hébergement, nom de domaine et emails</td>
@@ -103,8 +106,8 @@
                         </div>
                     </div>
                     <div class="row justify-content-around">
-                        <a href="#">
-                            <button>Button</button>
+                        <a href="{{ 'contact' }}">
+                            <button>Sélectionner</button>
                         </a>
                     </div>
                 </div>
@@ -144,8 +147,8 @@
                         </div>
                     </div>
                     <div class="row justify-content-around">
-                        <a href="#">
-                            <button>Button</button>
+                        <a href="{{ 'contact' }}">
+                            <button>Sélectionner</button>
                         </a>
                     </div>
                 </div>
