--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -23,8 +23,8 @@
                         <p class="envaleur">L’agence est spécialisée dans la réalisation de projets en transformation digitale. Elle accompagne les petites structures et les indépendants dans leur projet de stratégie en présence en ligne et d’optimisation de leurs existants. Cocorico digital conçoit des outils dernières générations et exclusivement développés en France.</p>
                     </div>
                     <div class="row justify-content-around">
-                        <a>
-                            <button class="mt-0">Button</button>
+                        <a href="{{ 'contact' }}">
+                            <button class="mt-0">Nous contacter</button>
                         </a>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="row col-12 justify-content-around margin-auto">
                 <a href="{{ 'catalogue'}}">
-                    <button>Button</button>
+                    <button>Nos services</button>
                 </a>
             </div>
         </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="row col-12 col-lg-12 justify-content-around margin-auto">
                 <a href="#">
-                    <button>Button</button>
+                    <button>Projets réalisés</button>
                 </a>
             </div>
         </section>
