add title on all pages

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% block title %}Blog{% endblock %}
+
 {% block stylesheets %}
     <link href="{{ asset('CSS/blog.css') }}" rel="stylesheet">
 {% endblock %}
