--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% block title %}Nous contacter{% endblock %}
+
 {% block stylesheets %}
     <link href="{{ asset('CSS/contact.css') }}" rel="stylesheet">
 {% endblock %}
