--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -153,7 +153,7 @@
             <h5 class="mb-0">Blog</h5>
         </div>
         <div class="col-lg-2 col-md-2 pr-0 pl-0 display_desktop">
-            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+            <p id="link_blog"><a href="{{ 'blog' }}">Retrouvez tous nos conseils et astuces pour devenir un pro du digital !</a></p>
         </div>
         <div class="row col-2 mr-xl-5 d-lg-inline-flex p-0 mr-0 display_desktop">
             <div class="col-12 text-right pr-0">
